# runebound.sh

./: .gitignore  Cargo.toml  Makefile  calendar-feature.md  calendar.json  cleanup.md  entity-refactor.md  entity.md  package-lock.json  plan-phase-1.md  plan-phase-2.md  plan-phase-3.md  publish-feature.md  reroll-enhancement.md  rust-toolchain.toml
.github/workflows/: release-windows.yml
command-handler/: Cargo.toml
command-handler/src/: lib.rs
command-specs/: Cargo.toml
command-specs/src/: lib.rs
core/: Cargo.toml
core/migrations/: 0001_init.sql  0002_locations.sql  0003_npcs.sql  0004_npcs_add_details.sql  0005_npcs_add_story_fields.sql  0006_npcs_add_occupation.sql  0007_soft_deletes.sql  0008_locations_add_details.sql  0009_factions.sql  0010_items.sql  0011_items_remove_owner.sql  0012_soft_delete_operation.sql  0013_events.sql  0014_gods.sql  0015_dungeons.sql  0016_dungeons_add_location.sql  0017_dungeons_add_story.sql  0018_locations_add_anchor.sql  0019_factions_woac.sql  0020_spells.sql  0021_monsters.sql
core/src/: calendar.rs  card_store.rs  command.rs  command_manifest.rs  command_parse.rs  config.rs  db.rs  db_macros.rs  entity_store.rs  fivetools_markup.rs  health.rs  lib.rs  monster_copy.rs  monster_import.rs  monster_store.rs  npc.rs  onboarding_wizard.rs  output.rs  serialization.rs  service.rs  session.rs  spell_import.rs  spell_store.rs  strings.rs  vault.rs
desktop/: index.html  package-lock.json  package.json  tailwind.config.cjs  tsconfig.json  vite.config.ts
desktop/src/: App.tsx  index.css  main.tsx
desktop/src-tauri/: Cargo.toml  installer-hooks.nsh  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: app_state.rs  boot.rs  main.rs  router.rs  utils.rs
desktop/src-tauri/src/commands/: calendar_commands.rs  create_commands.rs  date_commands.rs  dungeon_commands.rs  dungeon_flow.rs  entity_commands.rs  event_commands.rs  faction_commands.rs  god_commands.rs  item_commands.rs  location_commands.rs  mod.rs  monster_commands.rs  moon_commands.rs  npc_commands.rs  publish_commands.rs  setup_commands.rs  spell_commands.rs  system_commands.rs  time_delta_commands.rs
desktop/src-tauri/src/entities/: common.rs  domain.rs  kind.rs  mod.rs  registry.rs  schema.rs
desktop/src-tauri/src/entities/domains/: dungeon_domain.rs  event_domain.rs  faction_domain.rs  god_domain.rs  item_domain.rs  location_domain.rs  mod.rs  npc_domain.rs
desktop/src-tauri/src/repositories/: mod.rs
desktop/src-tauri/src/services/: ai_generation.rs  bestiary_library.rs  entity_admin.rs  entity_persistence.rs  entity_persistence_macros.rs  entity_reroll.rs  mention_extraction.rs  mod.rs  ollama_chat.rs  publish.rs  spell_library.rs  suggestions.rs  ts_export.rs  vault_ref.rs  vault_sync.rs
desktop/src-tauri/src/services/ai_generation/: dungeon.rs  engine.rs  event.rs  faction.rs  god.rs  item.rs  location.rs  mod.rs  npc.rs  reference.rs
desktop/src-tauri/src/wizards/: dungeon.rs  entity_link.rs  faction.rs  location.rs  mod.rs  prompt.rs  registry.rs  runtime.rs  session.rs  wizard.rs
desktop/src/command/: autocomplete.ts  parser-client.ts
desktop/src/entity/: client.ts
desktop/src/npc/: client.ts
desktop/src/onboarding/: client.ts
desktop/src/output/: entry-doc.ts  markdown.ts  renderer.tsx  theme.ts  types.ts
docs/: 0.6.0-design.md  0.6.0-location-subfoldering.md  0.6.0-spec.md  REQUIREMENTS.md  architecture.md  cleanup-0.5.0.md  cleanup-0.7.0-boot-ts-and-dead-code.md  cleanup-spellbook-bestiary.md  cli.md  code-review-0.7.0-factions-locations.md  command-contexts.md  config.md  create-wizard-refactor.md  dungeons-spec.md  expanded-factions-design.md  expanded-factions-spec.md  feature-development.md  feature-dungeons.md  monster-manual.md  npc.md  onboarding-wizard-port.md  publish.md  refactor-ai-generation-module-split.md  render.md  review-dungeon-alignment.md  spellbook.md
docs/archive/: cleanup-0.5.0.md
plan/: REQUIREMENTS.md  cli.md  config.md  mvp.md  refactor-tasks.md  refactor.md  tech.md
plan/phases/: phase-1.md  phase-2.md  phase-3.md  phase-4.md  phase-5.md  phase-6.md
runebound-models/: Cargo.toml  build.rs
runebound-models/src/: drafts.rs  dungeon_plan.rs  events.rs  lib.rs  monsters.rs  output.rs  spells.rs  utils.rs
runebound-models/tests/: ts_models.rs
tui/: Cargo.toml
tui/src/: main.rs
wizard/: Cargo.toml
wizard/src/: lib.rs  prompt.rs  registry.rs  runtime.rs  session.rs  wizard.rs
