[workspace]
members = ["core", "command-handler", "command-specs"]
exclude = ["desktop/src-tauri"]
resolver = "2"

[workspace.package]
version = "0.2.1"
edition = "2024"

[workspace.dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["clock", "serde"] }
dirs = "6.0"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
shell-words = "1.1"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "migrate"] }
tokio = { version = "1.48", features = ["macros", "rt-multi-thread"] }
toml = "0.8"
url = "2.5"
