[package]
name = "dnd-core"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
chrono.workspace = true
dirs.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
shell-words.workspace = true
sqlx.workspace = true
tokio.workspace = true
toml.workspace = true
url.workspace = true

[dev-dependencies]
serde_json = "1.0"
