[package]
name = "dnd-core"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
async-trait = "0.1"
chrono.workspace = true
command-handler = { path = "../command-handler" }
command-specs = { path = "../command-specs" }
dirs.workspace = true
reqwest.workspace = true
runebound-models = { path = "../runebound-models" }
wizard = { path = "../wizard" }
serde.workspace = true
serde_json.workspace = true
shell-words.workspace = true
sqlx.workspace = true
tokio.workspace = true
toml.workspace = true
url.workspace = true

[dev-dependencies]
serde_json = "1.0"
