[package]
name = "dnd-desktop"
version = "0.7.0"
edition = "2024"

[package.metadata.tauri-winres]
ProductName = "Runebound"
FileDescription = "runebound.sh desktop app"
OriginalFilename = "dnd-desktop.exe"
LegalCopyright = "Copyright (c) 2026"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
command-handler = { path = "../../command-handler" }
dnd-core = { path = "../../core" }
command-specs = { path = "../../command-specs" }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
runebound-models = { path = "../../runebound-models" }
wizard = { path = "../../wizard" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
shellexpand = "3.1"
ts-rs = "12"
tauri = { version = "2.0", features = [] }
tauri-plugin-dialog = "2"
tokio = { version = "1.48", features = ["macros", "rt-multi-thread"] }
tokio-util = "0.7"
toml = "0.8"
async-trait = "0.1"
